--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import '@fontsource/saira-extra-condensed/900.css';
+import '@fontsource/lobster';
 interface Props {
 	title: string;
 }
@@ -16,12 +18,14 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<div class="max-w-6xl px-10 mx-auto">
+			<slot />
+		</div>
 	</body>
 </html>
 <style is:global>
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #0E0E11;
 	}
 </style>
